[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/Cup Nooble  - Sprout Lands Basic pack/Objects/Basic Plants.png" type="Texture" id=1]
[ext_resource path="res://scenes/ObjectPlant.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/plant_seed_sprite.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0.572549, 0.658824, 0.54902, 0, 0.572549, 0.658824, 0.54902 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )

[node name="ObjectPlant" type="Node2D" groups=["plant"]]
script = ExtResource( 2 )

[node name="SeedSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
vframes = 2
frame = 7

[node name="RecentlyHandledTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="WaterSprite" type="Sprite" parent="."]
position = Vector2( 0.5, 6.5 )
scale = Vector2( 0.109375, 0.046875 )
texture = SubResource( 2 )

[connection signal="timeout" from="RecentlyHandledTimer" to="." method="_on_RecentlyHandledTimer_timeout"]
